# ia-lab

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  ansible.cfg  go.mod  go.sum  inventory.yml  pyproject.toml  requirements-sidecars.txt
.venv-phase4/: pyvenv.cfg
benchmarks/: config.agent-maturity.default.json  config.default.json  repos.default.json
benchmarks/cases/: agent-maturity-coder-python-slugify.json  agent-maturity-coordination-python-slugify.json  agent-maturity-planner-click.json  (+10 more)
docs/: README.md  codex-agentic-workflow.md  codex-remote-verification-audit.md  getting-started.md  local-bridge.md  orchestrator-go-runtime.md  orchestrator-go-shadow.md  orchestrator-redeploy.md  server-baseline.md  system-usage.md  tui.md  wireguard.md
group_vars/: all.yml
host_vars/: lab.yml
jetbrains-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
playbooks/: bootstrap.yml  cpu-tuning.yml  deploy-codex-local-gateway.yml  deploy-openclaw.yml  deploy-orchestrator.yml
scripts/: benchmark-context-memory.sh  bootstrap-codex-home.sh  build-orchestrator-go.sh  codex-lab-app  codex-lab-exec  codex-lab-safe-path  codex-lab-tui  codex-mode.sh  codex-openai  create-orchestrator-api-key.sh  generate-benchmark-cases.py  reset-orchestrator-state.sh  run-codex-lab-status-board-benchmark.sh  smoke-golden-path-bridge.sh  smoke-semantic-runtime.sh  summarize-codex-remote-verification.py  test-codex-mode-guided-helpers.sh  test-orchestrator-go.sh  verify-codex-lab-remote-soak.sh  verify-codex-lab-remote.sh
(+339 files in other folders)
